// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden compiler fixture > pins every export adapter > agents 1`] = `
{
  "content": "# AGENTS.md — Golden fixture

Repository instructions for coding agents. Follow the project context below for all implementation work.

# Project Context — Golden fixture

Compiler 0.4.1 · generated by DevContext OS. Decisions below are the project owner's explicit choices; treat them as requirements, not suggestions.

## Project brief

Reference project used to pin compiler semantics.

- Product type: SaaS
- Stage: mvp
- Platforms: web, mobile

### Priorities

- Fast MVP
- Maintainability

## How to read the decisions

- LOCKED: must use; never replace without explicit owner approval.
- PREFERRED: use by default; alternatives only with a documented reason.
- AI_DECIDE: deliberately delegated to you within the listed constraints.
- DISABLED: never use in this project.

## Locked decisions

### database.primary
- Mode: LOCKED
- Source: global
- Instruction: Use PostgreSQL. Do not replace it without explicit project-owner approval.
- Resource: PostgreSQL (database)
- Rationale: Team standard.

### frontend.framework
- Mode: LOCKED
- Source: project
- Instruction: Use Next.js. Do not replace it without explicit project-owner approval.
- Resource: Next.js (framework)
- Reference: https://nextjs.org
- Rationale: App Router is required.
- Overrides: recipe PREFERRED, profile "Design profile" LOCKED, global PREFERRED

## Preferred defaults

### backend.queue
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Redis. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Redis (cache)

### frontend.component.toggle
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Saved Toggle. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Saved Toggle (component)
- Reference: https://example.com/components/toggle
- Install: \`npx shadcn add toggle\`

### frontend.ui.base
- Mode: PREFERRED
- Source: profile "Fast SaaS"
- Instruction: Prefer Old UI kit. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Old UI kit (ui_library)
- Note: this resource is archived in the Library; confirm it is still wanted.
- Overrides: profile "Design profile" LOCKED

### infra.monitoring
- Mode: PREFERRED
- Source: project
- Instruction: Prefer an appropriate solution. Use an alternative only when it cannot satisfy the requirement, and document why.

## Delegated decisions (AI decides)

### backend.framework
- Mode: AI_DECIDE
- Source: project
- Instruction: This decision is delegated to you. Choose the smallest appropriate solution within the stated constraints and document the choice.
- Allowed options: Fastify, Hono
- Constraint notes: TypeScript only
- budget: \`"low"\`

## Do not use

### database.cache
- Mode: DISABLED
- Source: project
- Instruction: Do not use Redis in this project.
- Resource: Redis (cache)

## Reference resources

- **Next.js** (framework) · slots: frontend.framework
  - Source: https://nextjs.org
  - Docs: https://nextjs.org/docs
- **Old UI kit** (ui_library) · attached to project · slots: frontend.ui.base
  - Note: archived in the Library; confirm before relying on it.
- **PostgreSQL** (database) · attached to project · slots: database.primary
  - Primary relational store.
- **Saved Toggle** (component) · attached to project · slots: frontend.component.toggle
  - Source: https://example.com/components/toggle
  - Install: \`npx shadcn add toggle\`

## Engineering rules

- Prefer boring technology.
- Every API input is validated with Zod.

## Warnings

- DISABLED_RESOURCE_ATTACHED: Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.
- RESOURCE_ARCHIVED: frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.
- RESOURCE_CONFLICT: Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.
- RESOURCE_UNRESOLVED: infra.monitoring: the selected resource could not be found in the Library.

## Working rules

- Do not introduce a replacement for a locked technology.
- Check preferred and attached resources before implementing custom alternatives.
- Treat AI_DECIDE slots as delegated decisions, not missing requirements; record what you chose and why.
- Never use disabled technologies, even as transitive conveniences.
- Keep implementation proportional to the current project stage.
",
  "fileName": "AGENTS.md",
  "target": "agents",
}
`;

exports[`golden compiler fixture > pins every export adapter > claude 1`] = `
{
  "content": "# CLAUDE.md — Golden fixture

Use these project decisions as persistent implementation context.
If a decision conflicts with a user instruction in the current task, surface the conflict before changing architecture.

# Project Context — Golden fixture

Compiler 0.4.1 · generated by DevContext OS. Decisions below are the project owner's explicit choices; treat them as requirements, not suggestions.

## Project brief

Reference project used to pin compiler semantics.

- Product type: SaaS
- Stage: mvp
- Platforms: web, mobile

### Priorities

- Fast MVP
- Maintainability

## How to read the decisions

- LOCKED: must use; never replace without explicit owner approval.
- PREFERRED: use by default; alternatives only with a documented reason.
- AI_DECIDE: deliberately delegated to you within the listed constraints.
- DISABLED: never use in this project.

## Locked decisions

### database.primary
- Mode: LOCKED
- Source: global
- Instruction: Use PostgreSQL. Do not replace it without explicit project-owner approval.
- Resource: PostgreSQL (database)
- Rationale: Team standard.

### frontend.framework
- Mode: LOCKED
- Source: project
- Instruction: Use Next.js. Do not replace it without explicit project-owner approval.
- Resource: Next.js (framework)
- Reference: https://nextjs.org
- Rationale: App Router is required.
- Overrides: recipe PREFERRED, profile "Design profile" LOCKED, global PREFERRED

## Preferred defaults

### backend.queue
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Redis. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Redis (cache)

### frontend.component.toggle
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Saved Toggle. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Saved Toggle (component)
- Reference: https://example.com/components/toggle
- Install: \`npx shadcn add toggle\`

### frontend.ui.base
- Mode: PREFERRED
- Source: profile "Fast SaaS"
- Instruction: Prefer Old UI kit. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Old UI kit (ui_library)
- Note: this resource is archived in the Library; confirm it is still wanted.
- Overrides: profile "Design profile" LOCKED

### infra.monitoring
- Mode: PREFERRED
- Source: project
- Instruction: Prefer an appropriate solution. Use an alternative only when it cannot satisfy the requirement, and document why.

## Delegated decisions (AI decides)

### backend.framework
- Mode: AI_DECIDE
- Source: project
- Instruction: This decision is delegated to you. Choose the smallest appropriate solution within the stated constraints and document the choice.
- Allowed options: Fastify, Hono
- Constraint notes: TypeScript only
- budget: \`"low"\`

## Do not use

### database.cache
- Mode: DISABLED
- Source: project
- Instruction: Do not use Redis in this project.
- Resource: Redis (cache)

## Reference resources

- **Next.js** (framework) · slots: frontend.framework
  - Source: https://nextjs.org
  - Docs: https://nextjs.org/docs
- **Old UI kit** (ui_library) · attached to project · slots: frontend.ui.base
  - Note: archived in the Library; confirm before relying on it.
- **PostgreSQL** (database) · attached to project · slots: database.primary
  - Primary relational store.
- **Saved Toggle** (component) · attached to project · slots: frontend.component.toggle
  - Source: https://example.com/components/toggle
  - Install: \`npx shadcn add toggle\`

## Engineering rules

- Prefer boring technology.
- Every API input is validated with Zod.

## Warnings

- DISABLED_RESOURCE_ATTACHED: Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.
- RESOURCE_ARCHIVED: frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.
- RESOURCE_CONFLICT: Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.
- RESOURCE_UNRESOLVED: infra.monitoring: the selected resource could not be found in the Library.

## Working rules

- Do not introduce a replacement for a locked technology.
- Check preferred and attached resources before implementing custom alternatives.
- Treat AI_DECIDE slots as delegated decisions, not missing requirements; record what you chose and why.
- Never use disabled technologies, even as transitive conveniences.
- Keep implementation proportional to the current project stage.
",
  "fileName": "CLAUDE.md",
  "target": "claude",
}
`;

exports[`golden compiler fixture > pins every export adapter > copilot 1`] = `
{
  "content": "# Copilot instructions — Golden fixture

Use these repository-wide project constraints for code generation and review.

# Project Context — Golden fixture

Compiler 0.4.1 · generated by DevContext OS. Decisions below are the project owner's explicit choices; treat them as requirements, not suggestions.

## Project brief

Reference project used to pin compiler semantics.

- Product type: SaaS
- Stage: mvp
- Platforms: web, mobile

### Priorities

- Fast MVP
- Maintainability

## How to read the decisions

- LOCKED: must use; never replace without explicit owner approval.
- PREFERRED: use by default; alternatives only with a documented reason.
- AI_DECIDE: deliberately delegated to you within the listed constraints.
- DISABLED: never use in this project.

## Locked decisions

### database.primary
- Mode: LOCKED
- Source: global
- Instruction: Use PostgreSQL. Do not replace it without explicit project-owner approval.
- Resource: PostgreSQL (database)
- Rationale: Team standard.

### frontend.framework
- Mode: LOCKED
- Source: project
- Instruction: Use Next.js. Do not replace it without explicit project-owner approval.
- Resource: Next.js (framework)
- Reference: https://nextjs.org
- Rationale: App Router is required.
- Overrides: recipe PREFERRED, profile "Design profile" LOCKED, global PREFERRED

## Preferred defaults

### backend.queue
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Redis. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Redis (cache)

### frontend.component.toggle
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Saved Toggle. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Saved Toggle (component)
- Reference: https://example.com/components/toggle
- Install: \`npx shadcn add toggle\`

### frontend.ui.base
- Mode: PREFERRED
- Source: profile "Fast SaaS"
- Instruction: Prefer Old UI kit. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Old UI kit (ui_library)
- Note: this resource is archived in the Library; confirm it is still wanted.
- Overrides: profile "Design profile" LOCKED

### infra.monitoring
- Mode: PREFERRED
- Source: project
- Instruction: Prefer an appropriate solution. Use an alternative only when it cannot satisfy the requirement, and document why.

## Delegated decisions (AI decides)

### backend.framework
- Mode: AI_DECIDE
- Source: project
- Instruction: This decision is delegated to you. Choose the smallest appropriate solution within the stated constraints and document the choice.
- Allowed options: Fastify, Hono
- Constraint notes: TypeScript only
- budget: \`"low"\`

## Do not use

### database.cache
- Mode: DISABLED
- Source: project
- Instruction: Do not use Redis in this project.
- Resource: Redis (cache)

## Reference resources

- **Next.js** (framework) · slots: frontend.framework
  - Source: https://nextjs.org
  - Docs: https://nextjs.org/docs
- **Old UI kit** (ui_library) · attached to project · slots: frontend.ui.base
  - Note: archived in the Library; confirm before relying on it.
- **PostgreSQL** (database) · attached to project · slots: database.primary
  - Primary relational store.
- **Saved Toggle** (component) · attached to project · slots: frontend.component.toggle
  - Source: https://example.com/components/toggle
  - Install: \`npx shadcn add toggle\`

## Engineering rules

- Prefer boring technology.
- Every API input is validated with Zod.

## Warnings

- DISABLED_RESOURCE_ATTACHED: Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.
- RESOURCE_ARCHIVED: frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.
- RESOURCE_CONFLICT: Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.
- RESOURCE_UNRESOLVED: infra.monitoring: the selected resource could not be found in the Library.

## Working rules

- Do not introduce a replacement for a locked technology.
- Check preferred and attached resources before implementing custom alternatives.
- Treat AI_DECIDE slots as delegated decisions, not missing requirements; record what you chose and why.
- Never use disabled technologies, even as transitive conveniences.
- Keep implementation proportional to the current project stage.
",
  "fileName": ".github/copilot-instructions.md",
  "target": "copilot",
}
`;

exports[`golden compiler fixture > pins every export adapter > cursor 1`] = `
{
  "content": "---
description: "DevContext project rules for Golden fixture"
alwaysApply: true
---

# Project Context — Golden fixture

Compiler 0.4.1 · generated by DevContext OS. Decisions below are the project owner's explicit choices; treat them as requirements, not suggestions.

## Project brief

Reference project used to pin compiler semantics.

- Product type: SaaS
- Stage: mvp
- Platforms: web, mobile

### Priorities

- Fast MVP
- Maintainability

## How to read the decisions

- LOCKED: must use; never replace without explicit owner approval.
- PREFERRED: use by default; alternatives only with a documented reason.
- AI_DECIDE: deliberately delegated to you within the listed constraints.
- DISABLED: never use in this project.

## Locked decisions

### database.primary
- Mode: LOCKED
- Source: global
- Instruction: Use PostgreSQL. Do not replace it without explicit project-owner approval.
- Resource: PostgreSQL (database)
- Rationale: Team standard.

### frontend.framework
- Mode: LOCKED
- Source: project
- Instruction: Use Next.js. Do not replace it without explicit project-owner approval.
- Resource: Next.js (framework)
- Reference: https://nextjs.org
- Rationale: App Router is required.
- Overrides: recipe PREFERRED, profile "Design profile" LOCKED, global PREFERRED

## Preferred defaults

### backend.queue
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Redis. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Redis (cache)

### frontend.component.toggle
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Saved Toggle. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Saved Toggle (component)
- Reference: https://example.com/components/toggle
- Install: \`npx shadcn add toggle\`

### frontend.ui.base
- Mode: PREFERRED
- Source: profile "Fast SaaS"
- Instruction: Prefer Old UI kit. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Old UI kit (ui_library)
- Note: this resource is archived in the Library; confirm it is still wanted.
- Overrides: profile "Design profile" LOCKED

### infra.monitoring
- Mode: PREFERRED
- Source: project
- Instruction: Prefer an appropriate solution. Use an alternative only when it cannot satisfy the requirement, and document why.

## Delegated decisions (AI decides)

### backend.framework
- Mode: AI_DECIDE
- Source: project
- Instruction: This decision is delegated to you. Choose the smallest appropriate solution within the stated constraints and document the choice.
- Allowed options: Fastify, Hono
- Constraint notes: TypeScript only
- budget: \`"low"\`

## Do not use

### database.cache
- Mode: DISABLED
- Source: project
- Instruction: Do not use Redis in this project.
- Resource: Redis (cache)

## Reference resources

- **Next.js** (framework) · slots: frontend.framework
  - Source: https://nextjs.org
  - Docs: https://nextjs.org/docs
- **Old UI kit** (ui_library) · attached to project · slots: frontend.ui.base
  - Note: archived in the Library; confirm before relying on it.
- **PostgreSQL** (database) · attached to project · slots: database.primary
  - Primary relational store.
- **Saved Toggle** (component) · attached to project · slots: frontend.component.toggle
  - Source: https://example.com/components/toggle
  - Install: \`npx shadcn add toggle\`

## Engineering rules

- Prefer boring technology.
- Every API input is validated with Zod.

## Warnings

- DISABLED_RESOURCE_ATTACHED: Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.
- RESOURCE_ARCHIVED: frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.
- RESOURCE_CONFLICT: Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.
- RESOURCE_UNRESOLVED: infra.monitoring: the selected resource could not be found in the Library.

## Working rules

- Do not introduce a replacement for a locked technology.
- Check preferred and attached resources before implementing custom alternatives.
- Treat AI_DECIDE slots as delegated decisions, not missing requirements; record what you chose and why.
- Never use disabled technologies, even as transitive conveniences.
- Keep implementation proportional to the current project stage.
",
  "fileName": ".cursor/rules/devcontext.mdc",
  "target": "cursor",
}
`;

exports[`golden compiler fixture > pins every export adapter > generic 1`] = `
{
  "content": "# Project Context — Golden fixture

Compiler 0.4.1 · generated by DevContext OS. Decisions below are the project owner's explicit choices; treat them as requirements, not suggestions.

## Project brief

Reference project used to pin compiler semantics.

- Product type: SaaS
- Stage: mvp
- Platforms: web, mobile

### Priorities

- Fast MVP
- Maintainability

## How to read the decisions

- LOCKED: must use; never replace without explicit owner approval.
- PREFERRED: use by default; alternatives only with a documented reason.
- AI_DECIDE: deliberately delegated to you within the listed constraints.
- DISABLED: never use in this project.

## Locked decisions

### database.primary
- Mode: LOCKED
- Source: global
- Instruction: Use PostgreSQL. Do not replace it without explicit project-owner approval.
- Resource: PostgreSQL (database)
- Rationale: Team standard.

### frontend.framework
- Mode: LOCKED
- Source: project
- Instruction: Use Next.js. Do not replace it without explicit project-owner approval.
- Resource: Next.js (framework)
- Reference: https://nextjs.org
- Rationale: App Router is required.
- Overrides: recipe PREFERRED, profile "Design profile" LOCKED, global PREFERRED

## Preferred defaults

### backend.queue
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Redis. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Redis (cache)

### frontend.component.toggle
- Mode: PREFERRED
- Source: project
- Instruction: Prefer Saved Toggle. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Saved Toggle (component)
- Reference: https://example.com/components/toggle
- Install: \`npx shadcn add toggle\`

### frontend.ui.base
- Mode: PREFERRED
- Source: profile "Fast SaaS"
- Instruction: Prefer Old UI kit. Use an alternative only when it cannot satisfy the requirement, and document why.
- Resource: Old UI kit (ui_library)
- Note: this resource is archived in the Library; confirm it is still wanted.
- Overrides: profile "Design profile" LOCKED

### infra.monitoring
- Mode: PREFERRED
- Source: project
- Instruction: Prefer an appropriate solution. Use an alternative only when it cannot satisfy the requirement, and document why.

## Delegated decisions (AI decides)

### backend.framework
- Mode: AI_DECIDE
- Source: project
- Instruction: This decision is delegated to you. Choose the smallest appropriate solution within the stated constraints and document the choice.
- Allowed options: Fastify, Hono
- Constraint notes: TypeScript only
- budget: \`"low"\`

## Do not use

### database.cache
- Mode: DISABLED
- Source: project
- Instruction: Do not use Redis in this project.
- Resource: Redis (cache)

## Reference resources

- **Next.js** (framework) · slots: frontend.framework
  - Source: https://nextjs.org
  - Docs: https://nextjs.org/docs
- **Old UI kit** (ui_library) · attached to project · slots: frontend.ui.base
  - Note: archived in the Library; confirm before relying on it.
- **PostgreSQL** (database) · attached to project · slots: database.primary
  - Primary relational store.
- **Saved Toggle** (component) · attached to project · slots: frontend.component.toggle
  - Source: https://example.com/components/toggle
  - Install: \`npx shadcn add toggle\`

## Engineering rules

- Prefer boring technology.
- Every API input is validated with Zod.

## Warnings

- DISABLED_RESOURCE_ATTACHED: Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.
- RESOURCE_ARCHIVED: frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.
- RESOURCE_CONFLICT: Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.
- RESOURCE_UNRESOLVED: infra.monitoring: the selected resource could not be found in the Library.

## Working rules

- Do not introduce a replacement for a locked technology.
- Check preferred and attached resources before implementing custom alternatives.
- Treat AI_DECIDE slots as delegated decisions, not missing requirements; record what you chose and why.
- Never use disabled technologies, even as transitive conveniences.
- Keep implementation proportional to the current project stage.
",
  "fileName": "PROJECT_CONTEXT.md",
  "target": "generic",
}
`;

exports[`golden compiler fixture > pins the canonical object 1`] = `
{
  "compilerVersion": "0.4.1",
  "decisions": [
    {
      "constraints": {
        "allowed": [
          "Fastify",
          "Hono",
        ],
        "budget": "low",
        "notes": "TypeScript only",
      },
      "decisionId": "d2",
      "mode": "AI_DECIDE",
      "origin": null,
      "priority": 0,
      "rationale": null,
      "resource": null,
      "shadowed": [],
      "slot": "backend.framework",
      "source": "project",
    },
    {
      "constraints": {},
      "decisionId": "d6",
      "mode": "PREFERRED",
      "origin": null,
      "priority": 0,
      "rationale": null,
      "resource": {
        "archived": false,
        "id": "redis",
        "installCommand": null,
        "name": "Redis",
        "sourceUrl": null,
        "type": "cache",
      },
      "shadowed": [],
      "slot": "backend.queue",
      "source": "project",
    },
    {
      "constraints": {},
      "decisionId": "d3",
      "mode": "DISABLED",
      "origin": null,
      "priority": 0,
      "rationale": null,
      "resource": {
        "archived": false,
        "id": "redis",
        "installCommand": null,
        "name": "Redis",
        "sourceUrl": null,
        "type": "cache",
      },
      "shadowed": [],
      "slot": "database.cache",
      "source": "project",
    },
    {
      "constraints": {},
      "decisionId": "g2",
      "mode": "LOCKED",
      "origin": null,
      "priority": 0,
      "rationale": "Team standard.",
      "resource": {
        "archived": false,
        "id": "pg",
        "installCommand": null,
        "name": "PostgreSQL",
        "sourceUrl": null,
        "type": "database",
      },
      "shadowed": [],
      "slot": "database.primary",
      "source": "global",
    },
    {
      "constraints": {},
      "decisionId": "d4",
      "mode": "PREFERRED",
      "origin": null,
      "priority": 0,
      "rationale": null,
      "resource": {
        "archived": false,
        "id": "toggle",
        "installCommand": "npx shadcn add toggle",
        "name": "Saved Toggle",
        "sourceUrl": "https://example.com/components/toggle",
        "type": "component",
      },
      "shadowed": [],
      "slot": "frontend.component.toggle",
      "source": "project",
    },
    {
      "constraints": {},
      "decisionId": "d1",
      "mode": "LOCKED",
      "origin": null,
      "priority": 0,
      "rationale": "App Router is required.",
      "resource": {
        "archived": false,
        "id": "next",
        "installCommand": null,
        "name": "Next.js",
        "sourceUrl": "https://nextjs.org",
        "type": "framework",
      },
      "shadowed": [
        {
          "decisionId": "r1",
          "mode": "PREFERRED",
          "origin": null,
          "priority": 0,
          "resourceId": "next",
          "scope": "recipe",
        },
        {
          "decisionId": "p1",
          "mode": "LOCKED",
          "origin": {
            "id": "profile-design",
            "name": "Design profile",
            "priority": 1,
          },
          "priority": 5,
          "resourceId": "astro",
          "scope": "profile",
        },
        {
          "decisionId": "g1",
          "mode": "PREFERRED",
          "origin": null,
          "priority": 0,
          "resourceId": "astro",
          "scope": "global",
        },
      ],
      "slot": "frontend.framework",
      "source": "project",
    },
    {
      "constraints": {},
      "decisionId": "p2",
      "mode": "PREFERRED",
      "origin": {
        "id": "profile-stack",
        "name": "Fast SaaS",
        "priority": 5,
      },
      "priority": 0,
      "rationale": null,
      "resource": {
        "archived": true,
        "id": "old-kit",
        "installCommand": null,
        "name": "Old UI kit",
        "sourceUrl": null,
        "type": "ui_library",
      },
      "shadowed": [
        {
          "decisionId": "p3",
          "mode": "LOCKED",
          "origin": {
            "id": "profile-design",
            "name": "Design profile",
            "priority": 1,
          },
          "priority": 9,
          "resourceId": "toggle",
          "scope": "profile",
        },
      ],
      "slot": "frontend.ui.base",
      "source": "profile",
    },
    {
      "constraints": {},
      "decisionId": "d5",
      "mode": "PREFERRED",
      "origin": null,
      "priority": 0,
      "rationale": null,
      "resource": null,
      "shadowed": [],
      "slot": "infra.monitoring",
      "source": "project",
    },
  ],
  "project": {
    "description": "Reference project used to pin compiler semantics.",
    "id": "golden",
    "name": "Golden fixture",
    "platforms": [
      "web",
      "mobile",
    ],
    "priorities": [
      "Fast MVP",
      "Maintainability",
    ],
    "productType": "SaaS",
    "slug": "golden-fixture-00000000",
    "stage": "mvp",
  },
  "resources": [
    {
      "archived": false,
      "attached": false,
      "description": null,
      "docsUrl": "https://nextjs.org/docs",
      "id": "next",
      "installCommand": null,
      "name": "Next.js",
      "repoUrl": null,
      "slots": [
        "frontend.framework",
      ],
      "slug": null,
      "sourceUrl": "https://nextjs.org",
      "type": "framework",
    },
    {
      "archived": true,
      "attached": true,
      "description": null,
      "docsUrl": null,
      "id": "old-kit",
      "installCommand": null,
      "name": "Old UI kit",
      "repoUrl": null,
      "slots": [
        "frontend.ui.base",
      ],
      "slug": null,
      "sourceUrl": null,
      "type": "ui_library",
    },
    {
      "archived": false,
      "attached": true,
      "description": "Primary relational store.",
      "docsUrl": null,
      "id": "pg",
      "installCommand": null,
      "name": "PostgreSQL",
      "repoUrl": null,
      "slots": [
        "database.primary",
      ],
      "slug": null,
      "sourceUrl": null,
      "type": "database",
    },
    {
      "archived": false,
      "attached": true,
      "description": null,
      "docsUrl": null,
      "id": "toggle",
      "installCommand": "npx shadcn add toggle",
      "name": "Saved Toggle",
      "repoUrl": null,
      "slots": [
        "frontend.component.toggle",
      ],
      "slug": null,
      "sourceUrl": "https://example.com/components/toggle",
      "type": "component",
    },
  ],
  "rules": [
    "Prefer boring technology.",
    "Every API input is validated with Zod.",
  ],
  "warnings": [
    {
      "code": "DISABLED_RESOURCE_ATTACHED",
      "message": "Redis is attached to the project but disabled in database.cache. It is excluded from the active stack.",
      "resourceId": "redis",
      "slot": "database.cache",
    },
    {
      "code": "RESOURCE_ARCHIVED",
      "message": "frontend.ui.base: Old UI kit is archived in the Library. Confirm it is still wanted or pick a replacement.",
      "resourceId": "old-kit",
      "slot": "frontend.ui.base",
    },
    {
      "code": "RESOURCE_CONFLICT",
      "message": "Redis is disabled in database.cache but selected in backend.queue. Resolve the conflict; nothing was changed automatically.",
      "resourceId": "redis",
      "slot": "database.cache",
    },
    {
      "code": "RESOURCE_UNRESOLVED",
      "message": "infra.monitoring: the selected resource could not be found in the Library.",
      "resourceId": "missing",
      "slot": "infra.monitoring",
    },
  ],
}
`;

exports[`golden compiler fixture > pins the canonical object 2`] = `"d1a7e7bfdf0ef802b2f37c05632db07561e2e96afb4eef33c9ea384ca4d9a72f"`;
